--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-node": "^1.0.0-next.17",
-    "@sveltejs/kit": "^1.0.0-next.100",
-    "svelte": "^3.29.0",
-    "vite": "^2.2.3",
-    "bulma": "^0.9.2",
-    "sass": "^1.32.7",
-    "svelte-preprocess": "^4.6.9"
+    "@sveltejs/adapter-node": "^1.0.0-next.26",
+    "@sveltejs/kit": "^1.0.0-next.115",
+    "bulma": "^0.9.3",
+    "sass": "^1.35.1",
+    "svelte": "^3.38.2",
+    "svelte-preprocess": "^4.7.3",
+    "vite": "^2.3.8"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "firebase": "^8.6.8"
+  }
 }
